fix(yalb-1104): fix alignment issue mega menu primary menu, fix image Safari issue

--- a/components/02-molecules/cards/reference-card/_yds-reference-card.scss
+++ b/components/02-molecules/cards/reference-card/_yds-reference-card.scss
@@ -73,7 +73,7 @@ $break-card-collection-list-image-max: tokens.$break-s - 0.05;
   }
 
   img {
-    height: 100%;
+    height: auto;
   }
 }
 
