--- a/components/03-organisms/menu/primary-nav/_yds-primary-nav.scss
+++ b/components/03-organisms/menu/primary-nav/_yds-primary-nav.scss
@@ -77,11 +77,15 @@ $menu-sub-max-width: 19rem;
   }
 
   [data-site-header-nav-position='left'] & {
-    margin-left: calc(var(--size-spacing-5) * -1);
+    &[data-menu-variation='basic'] {
+      margin-left: calc(var(--size-spacing-5) * -1);
+    }
   }
 
   [data-site-header-nav-position='right'] & {
-    margin-right: calc(var(--size-spacing-5) * -1);
+    &[data-menu-variation='basic'] {
+      margin-right: calc(var(--size-spacing-5) * -1);
+    }
   }
 }
 
